--- a/www/index.html
+++ b/www/index.html
@@ -42,10 +42,10 @@
     <script type="text/template" id="instructions-tpl">
       <div id="instructions">
         <h3>Instructions</h3>
-        <p>From the overview screen, set your meditation time and then click "New Meditation." Once you're ready to begin, click the timer.<p>
+        <p>From the overview screen, set your meditation time and then tap "New Meditation." Once you're ready to begin, tap the timer.<p>
         <p>At this point, you'll hear a chime indicating that you should prepare to meditate. 20 seconds later, you will hear the chime again, signaling the beginning of your meditation.</p>
         <p>Finally, the chime will play for a third time at the end of your meditation.</p>
-        <p>You can click the timer at any time once the app has started counting down to pause or resume your meditation. Clicking the "cancel" button stops the meditaiton.</p>
+        <p>You can tap the timer at any time once the app has started counting down to pause or resume your meditation. taping the "cancel" button stops the meditaiton.</p>
         <p><a href="" class="back">Back</a></p>
       </div>
     </script>
